Adding some modified files and about page

--- a/Registration.html
+++ b/Registration.html
@@ -25,11 +25,11 @@
           <label for="pwd-repeat"><b>Repeat Password</b></label>
           <input type="password" placeholder="Repeat Password" name="pwd-repeat" id="pwd-repeat" required/>
           <!-- submit button -->
-          <button type="submit">Register</button>
+          <button type="submit"><a href="C:\Users\Anuradha.Oman\Desktop\Movie Project\Web-Page\home.html"></a>Register</button>
         </div>
         <!-- the # must ideally be replaced by the login page URL -->
         <div>
-          <p>Already have an account? <a href="#">Log in</a>.</p>
+          <p>Already have an account? <a href="login.html">Log in</a>.</p>
         </div>
         </div>
     </form>
