--- a/login.html
+++ b/login.html
@@ -89,7 +89,7 @@ span.psw {
 
 
 
-<form action="/action_page.php" method="post">
+<form action="home.html">
      <div class ="border">
     <h2 >Login Form</h2>
   <div class="container">
@@ -103,11 +103,9 @@ span.psw {
    
   </div>
 
-  <div class="container" style="background-color:#f1f1f1">
-    <button type="button" class="cancelbtn">Cancel</button>
-    
-    <span class="psw">Don't have a account ?<a href="#">Register Now</a></span>
-  </div>
+   
+    <span class="psw">Don't have a account ?<a href="Registration.html">Register Now</a></span>
+  
 </div>
 </form>
 
