--- a/home.html
+++ b/home.html
@@ -1,24 +1,66 @@
+<!DOCTYPE html>
 <html>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+  <title>Home Page</title>
+  <style>
+    .navbar {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            position: sticky;
+            top: 0;
+            cursor: pointer;
+        }
+    .nav-list li a:hover {
+            color: grey;
+        }
+    .nav-list li a {
+            text-decoration: none;
+            color: white;
+        }
+     .nav-list li {
+        list-style: none;
+        padding: 26px 30px;
+    }
+    .nav-list {
+        width: 70%;
+        display: flex;
+        align-items: center;
+    }
+        .background {
+        background: black;
+        background-blend-mode: darken;
+        background-size: cover;
+    }
+ 
+    .btn {
+            padding: 8px 20px;
+            margin: 7px 0;
+            border: 2px solid white;
+            border-radius: 8px;
+            background: none;
+            color: white;
+            cursor: pointer;
+        }
+     .firsthalf {
+            width: 100%;
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+        }
+  </style>
+</head>
 <body>
-
-    <!-- Navigation -->
-    <nav class="w3-bar w3-black">
-      <a href="#home" class="w3-button w3-bar-item">Home</a>
-      <a href="#band" class="w3-button w3-bar-item">Band</a>
-      <a href="#tour" class="w3-button w3-bar-item">Tour</a>
-      <a href="#contact" class="w3-button w3-bar-item">Contact</a>
-    </nav>
-    <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
-    <a href="#"><i class="fa fa-facebook-official"></i></a>
-    <a href="#"><i class="fa fa-pinterest-p"></i></a>
-    <a href="#"><i class="fa fa-twitter"></i></a>
-    <a href="#"><i class="fa fa-flickr"></i></a>
-    <a href="#"><i class="fa fa-linkedin"></i></a>
-   
-  </footer>
+  <nav class="navbar background">
+      <ul class="nav-list">
+          
+          <li><a href="login.html">Home</a></li>
+          <li><a href="home.html">Add/Edit</a></li>
+          <li><a href="about.html">About Us</a></li>
+      </ul>
+  </nav>
 </body>
-</html>
 
+</html>
