adding some changes in add movie

--- a/home.html
+++ b/home.html
@@ -57,7 +57,7 @@
       <ul class="nav-list">
           
           <li><a href="login.html">Home</a></li>
-          <li><a href="home.html">Add/Edit</a></li>
+          <li><a href="addMovie.html">Add Movie</a></li>
           <li><a href="about.html">About Us</a></li>
       </ul>
   </nav>
