--- a/addMovie.html
+++ b/addMovie.html
@@ -15,8 +15,12 @@
             <input type="text" id="title" placeholder="Title"/>
         </div>
         <div class="form">
-            <label for="year">Year</label>
-            <input type="number" id="year" placeholder="Year"/>
+            <label for="summary">Summary</label>
+            <input type="text" id="ratings" placeholder="summary"/>
+        </div>
+        <div class="form">
+            <label for="ratings">Ratings</label>
+            <input type="text" id="ratings" placeholder="ratings"/>
         </div>
         <div class="form">
             <button id="btn">Add Movie</button>
